notebook-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minimal-notebook
spec:
  selector:
    app: minimal-notebook
  ports:
  - protocol: "TCP"
    port: 8888
    targetPort: 8888
  type: LoadBalancer
