notebook-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: minimal-ingress
spec:
  rules:
      - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: minimal-notebook
                  port: 
                    number: 8888
